<?xml version="1.0" encoding="utf-8"?>
<!--typography, buttons 05.04-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.anytypeio.anytype.ui.editor.modals.IconPickerFragmentBase">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp">

        <View
            android:id="@+id/dragger"
            android:layout_width="48dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:background="@drawable/page_icon_picker_dragger_background" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/headerToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_toolbar_height">

        <TextView
            android:id="@+id/tvHeader"
            style="@style/TextView.UXStyle.Titles.1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/change_icon" />

        <TextView
            android:id="@+id/btnRemoveIcon"
            style="@style/TextView.UXStyle.Body"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/palette_system_red"
            android:text="@string/remove" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/page_icon_picker_filter_background">

        <ImageView
            android:id="@+id/searchIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_page_icon_picker_search"
            android:contentDescription="@string/content_description_loop_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/filterInputField"
            style="@style/TextView.UXStyle.Body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@null"
            android:hint="@string/page_icon_picker_emoji_filter"
            android:inputType="textNoSuggestions"
            android:textColorHint="@color/text_tertiary"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/clearSearchText"
            app:layout_constraintStart_toEndOf="@+id/searchIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/clearSearchText"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_clear_text"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:theme="@style/GreyProgressBar"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pickerRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:minHeight="300dp"
        android:paddingBottom="165dp" />

    <LinearLayout
        android:id="@+id/bottomToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_toolbar_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTabEmoji"
            style="@style/TextView.UXStyle.Body"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/emoji" />

        <TextView
            android:id="@+id/tvTabRandom"
            style="@style/TextView.UXStyle.Body"
            android:textColor="@color/glyph_active"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/random" />

        <TextView
            android:id="@+id/tvTabUpload"
            style="@style/TextView.UXStyle.Body"
            android:textColor="@color/glyph_active"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btn_upload" />

    </LinearLayout>

</LinearLayout>