<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        style="@style/TextView.UXStyle.Captions.1.Medium"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:id="@+id/category"
        tools:text="Smileys and people"
        android:layout_height="wrap_content"
        android:textColor="@color/text_secondary" />

</FrameLayout>